--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,83 +1,48 @@
-upstream django {
-    server web:8000;
-}
-
-# HTTP → HTTPS редирект + обработка ACME-challenge для Certbot
-server {
-    listen 80;
-    server_name glasshalf.ru www.glasshalf.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS конфигурация
-server {
-    listen 443 ssl http2;
-    server_name glasshalf.ru www.glasshalf.ru;
-
-    # Пути к SSL-сертификатам
-    ssl_certificate /etc/letsencrypt/live/glasshalf.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/glasshalf.ru/privkey.pem;
-
-    # Настройки SSL
-    ssl_session_cache shared:le_nginx_SSL:10m;
-    ssl_session_timeout 1440m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-
-    # HSTS заголовок
-    add_header Strict-Transport-Security "max-age=63072000" always;
-
-    # Проксирование на Django
-    location / {
-        proxy_pass http://django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-    }
-
-    location /static/ {
-        alias /app/static/;
-    }
-
-    location /media/ {
-        alias /app/media/;
-    }
-
-    # Перенаправление www на основной домен
-    if ($host = www.glasshalf.ru) {
-        return 301 https://glasshalf.ru$request_uri;
-    }
-}
-
-
-
-
-
-
 # upstream django {
 #     server web:8000;
 # }
 
+# # HTTP → HTTPS редирект + обработка ACME-challenge для Certbot
 # server {
 #     listen 80;
 #     server_name glasshalf.ru www.glasshalf.ru;
 
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
+
+# # HTTPS конфигурация
+# server {
+#     listen 443 ssl http2;
+#     server_name glasshalf.ru www.glasshalf.ru;
+
+#     # Пути к SSL-сертификатам
+#     ssl_certificate /etc/letsencrypt/live/glasshalf.ru/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/glasshalf.ru/privkey.pem;
+
+#     # Настройки SSL
+#     ssl_session_cache shared:le_nginx_SSL:10m;
+#     ssl_session_timeout 1440m;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers off;
+#     ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+
+#     # HSTS заголовок
+#     add_header Strict-Transport-Security "max-age=63072000" always;
+
+#     # Проксирование на Django
 #     location / {
 #         proxy_pass http://django;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_redirect off;
 #     }
 
 #     location /static/ {
@@ -87,4 +52,39 @@ server {
 #     location /media/ {
 #         alias /app/media/;
 #     }
+
+#     # Перенаправление www на основной домен
+#     if ($host = www.glasshalf.ru) {
+#         return 301 https://glasshalf.ru$request_uri;
+#     }
 # }
+
+
+
+
+
+
+upstream django {
+    server web:8000;
+}
+
+server {
+    listen 80;
+    server_name _;
+
+    location / {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /app/static/;
+    }
+
+    location /media/ {
+        alias /app/media/;
+    }
+}
